@@ -357,6 +357,21 @@ be used to build Score-P are as follows:
                explicit include and lib options directly.
   --with-librca-include=<Path to librca headers>
   --with-librca-lib=<Path to librca libraries>
+  --with-liblustreapi=(yes|no|<Path to liblustreapi installation>)
+               If you want to build with liblustreapi support but
+               do not have a liblustreapi in a standard location,
+               you need to explicitly specify the directory where
+               it is installed. On non-cross-compile systems we
+               search the system include and lib paths per default
+               [yes]; on cross-compile systems, however, you have
+               to specify a path [no]. --with-liblustreapi is a
+               shorthand for
+               --with-liblustreapi-include=<Path/include> and
+               --with-liblustreapi-lib=<Path/lib>. If these
+               shorthand assumptions are not correct, you can use
+               the explicit include and lib options directly.
+  --with-liblustreapi-include=<Path to liblustreapi headers>
+  --with-liblustreapi-lib=<Path to liblustreapi libraries>
   --with-libbfd=<Path to libbfd installation>
                If you want to build scorep with libbfd but do not have
                a libbfd in a standard location then you need to
@@ -507,6 +522,10 @@ variables:
               Path to libcupti libraries.
   LIBOPENCL_INCLUDE
               Path to libOpenCL headers.
+  LIBLUSTREAPI_INCLUDE
+              Path to liblustreapi headers.
+  LIBLUSTREAPI_LIB
+              Path to liblustreapi libraries.
   LIBOPENCL_LIB
               Path to libOpenCL libraries.
   LIBBFD_INCLUDE
