@@ -7,7 +7,7 @@ dnl
 dnl Copyright (c) 2009-2013,
 dnl Gesellschaft fuer numerische Simulation mbH Braunschweig, Germany
 dnl
-dnl Copyright (c) 2009-2019,
+dnl Copyright (c) 2009-2020,
 dnl Technische Universitaet Dresden, Germany
 dnl
 dnl Copyright (c) 2009-2013,
@@ -274,6 +274,7 @@ AC_SCOREP_CUDA
 SCOREP_OPENACC
 SCOREP_CRAY_PMI
 SCOREP_MNTENT_CHECK
+SCOREP_LUSTREAPI_CHECK
 
 AC_SCOREP_CHECK_SIZEOF([int64_t])
 if (( ac_cv_sizeof_void_p > ac_cv_sizeof_int64_t )); then
