@@ -1,0 +1,25 @@
+/*
+ * This file is part of the Score-P software (http://www.score-p.org)
+ *
+ * Copyright (c) 2020,
+ * Technische Universitaet Dresden, Germany
+ *
+ * This software may be modified and distributed under the terms of
+ * a BSD-style license.  See the COPYING file in the package base
+ * directory for details.
+ *
+ */
+
+/**
+ * @file
+ *
+ */
+
+#include <config.h>
+
+#include <SCOREP_Platform.h>
+
+void
+SCOREP_Platform_AddLustreProperties( SCOREP_IoFileHandle ioFileHandle )
+{
+}
