@@ -28,6 +28,7 @@ User tools and API improvements and changes:
 - Added wrapping of more vectorized I/O operations:
   - `preadv2`,  `preadv64`,  `preadv64v2`
   - `pwritev2`, `pwritev64`, `pwritev64v2`
+- Add stripe count/size for recorded files on the Lustre file system.
 
 Bugfixes:
 
